--- a/Exercicios/Ex022/fundo006.html
+++ b/Exercicios/Ex022/fundo006.html
@@ -10,13 +10,19 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top ;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
+            background-attachment: fixed;
+            /*
+            shorthand-background
+            color> image>position>{size}>attachament
+            
+            */
 
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border-radius: 10px;
@@ -26,6 +32,15 @@
 <body>
     <main>
         <h1>Teste imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos odit ducimus facere tempore, minus laudantium non, itaque quia porro aut autem a? Exercitationem est expedita soluta esse mollitia sapiente.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos odit ducimus facere tempore, minus laudantium non, itaque quia porro aut autem a? Exercitationem est expedita soluta esse mollitia sapiente.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos odit ducimus facere tempore, minus laudantium non, itaque quia porro aut autem a? Exercitationem est expedita soluta esse mollitia sapiente.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos odit ducimus facere tempore, minus laudantium non, itaque quia porro aut autem a? Exercitationem est expedita soluta esse mollitia sapiente.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos odit ducimus facere tempore, minus laudantium non, itaque quia porro aut autem a? Exercitationem est expedita soluta esse mollitia sapiente.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos odit ducimus facere tempore, minus laudantium non, itaque quia porro aut autem a? Exercitationem est expedita soluta esse mollitia sapiente.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos odit ducimus facere tempore, minus laudantium non, itaque quia porro aut autem a? Exercitationem est expedita soluta esse mollitia sapiente.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos odit ducimus facere tempore, minus laudantium non, itaque quia porro aut autem a? Exercitationem est expedita soluta esse mollitia sapiente.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos odit ducimus facere tempore, minus laudantium non, itaque quia porro aut autem a? Exercitationem est expedita soluta esse mollitia sapiente.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos odit ducimus facere tempore, minus laudantium non, itaque quia porro aut autem a? Exercitationem est expedita soluta esse mollitia sapiente.</p>
     </main>
 </body>
