--- a/d012/index.html
+++ b/d012/index.html
@@ -39,7 +39,7 @@
 
 
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -58,7 +58,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         
         <p>
             Tenho saudade das cartas <br>
@@ -73,7 +73,7 @@
 
    
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
