--- a/Exercicios/Ex024/iframe002.html
+++ b/Exercicios/Ex024/iframe002.html
@@ -19,7 +19,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam mollitia atque accusamus aliquid! Facere, incidunt voluptate libero optio sequi nulla sed. Commodi voluptas incidunt quidem exercitationem cupiditate itaque, delectus doloremque.</p>
 
-    <iframe src="pagina001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginasextras/pagina001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador nao e compativel</p>
+    </iframe>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium libero, ducimus quae sint aliquid id corrupti dicta, alias hic nisi a dolorem dignissimos consectetur nesciunt. Pariatur accusantium molestiae velit rem.</p>
 </body>
