--- a/Exercicios/Ex024/iframe003.html
+++ b/Exercicios/Ex024/iframe003.html
@@ -28,7 +28,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt animi totam, nihil eligendi, praesentium dignissimos iusto harum, distinctio consectetur error quia reiciendis? Quis corporis et maiores facere? Labore, enim nam!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est numquam dolores ratione nihil, dolor esse temporibus eaque ullam neque officia nobis harum ad dolore officiis, dignissimos quis incidunt, blanditiis in!</p>
 
-        <iframe id="tela" name="frame" src="" frameborder="0">
+        <iframe id="tela" name="frame" srcdoc="<h1>
+            Esolha uma das opcoes acima
+        </h1>" frameborder="0">
             <p>Infelizmente o navegador nao e compativel</p>
 
         </iframe>
