--- a/Exercicios/Ex025/form005.html
+++ b/Exercicios/Ex025/form005.html
@@ -7,13 +7,25 @@
 </head>
 <body>
     <h1>Exemplo de Formulario</h1>
-    <fieldset>
+    <form action="cadastro.php" method="get">
+        <fieldset>
+            <legend>Sexo</legend>
+            <input type="radio" name="sexo" id="isxmas"><label for="isxmas">Masculino</label><br>
+            <input type="radio" name="sexo" id="isxfem" checked><label for="isxmas">Feminino</label>
+            
+        </fieldset>
+        <fieldset>
         <legend>Esportes favoritos</legend>
-        <input type="checkbox" name="" id="">
+        <input type="checkbox" name="esbas" id="iesbas"><label for="iesbas">Basquete</label><br>
+        <input type="checkbox" name="esfut" id="iesfut" checked><label for="iesfut">Futebol</label><br>
+        <input type="checkbox" name="esnat" id="iesnat"><label for="iesnat">Natacao</label><br>
+        <input type="checkbox" name="esten" id="iesten"><label for="iesten">Tenis</label>
     </fieldset>
     <p>
         <input type="submit" value="Enviar">
         <input type="reset" value="Limpar">
     </p>
+    </form>
+    
 </body>
 </html>
