--- a/Exercicios/EX026/imagens/mq001/index.html
+++ b/Exercicios/EX026/imagens/mq001/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media query</title>
+    <!--Media Queries-->
+    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="estilo/impressora.css" media="print">
 </head>
 <body>
     <header>
         <h1>Moticias</h1>
         <menu>
+            <ul>
+                <li>Tecnologia</li>
+                <li>Esportes</li>
+                <li>Politica</li>
+            </ul>
 
         </menu>
     </header>
