--- a/Exercicios/EX026/mq005/index.html
+++ b/Exercicios/EX026/mq005/index.html
@@ -6,11 +6,12 @@
     <title>Media Query</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
-<body>
+<body onresize="mudouTamanho">
     <header>
         <h1>My Site</h1>
-        <span id="burguer"   class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
         <menu id="mn">
             <ul>
             <li><a href="#">Opcao 1</a></li>
@@ -31,6 +32,13 @@
         </article>
     </main>
     <script>
+        function mudouTamanho() {
+            if(window.innerWidth >= 768){
+                mn.style.display = 'block'
+            } else{
+                mn.style.display = 'none'
+            }
+        }
         function clickMenu(){
             if(mn.style.display == 'block'){
                 mn.style.display = 'none'
